Revision history for Dist-Zilla-Plugin-Test-CheckDeps

{{$NEXT}}

0.006     2013-04-28 08:39:02 America/Vancouver
          require version of Test::More that added is_passing()
          (RT#84905, Karen Etheridge)

0.005     2012-05-02 23:40:44 Europe/Amsterdam
          Increase runtime dependency on Test::CheckDeps to 0.002

0.004     2012-05-02 21:54:33 Europe/Amsterdam
          Inject a test-phase requirement on Test::CheckDeps and Test::More
          into the distribution being built.

0.003     2012-02-06 23:39:53 Europe/Amsterdam
          Rename test to t/00-check-deps.t
          Add runtime dependency on Test::CheckDeps and Test::More

0.002     2011-10-17 22:56:07 Europe/Amsterdam
          Renamed to Dist::Zilla::Plugin::Test::CheckDeps

0.001     2011-10-14 20:55:11 Europe/Amsterdam
          Initial release